--- a/html-and-css-prototype/index.html
+++ b/html-and-css-prototype/index.html
@@ -1,21 +1,31 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>HTML/CSS Prototype</title>
-    <link rel="stylesheet" href="CSS/stylesheet.css">
-  </head>
-  <body>
-    <div class="container">
-      <h1>Recreate this using HTML &amp; CSS</h1>
-      <img src="https://s3.amazonaws.com/f.cl.ly/items/2z3C3Z0L2Q0R282p1V0z/Image%202014-12-19%20at%2010.07.09%20AM.png" width="303" />
-    </div>
 
-    <!-- Your code goes here -->
-<div>
-  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo </p>
-</div>
+<head>
+  <meta charset="utf-8">
+  <title>HTML/CSS Prototype</title>
+  <link rel="stylesheet" href="CSS/stylesheet.css">
+</head>
+
+<body>
+  <div class="container">
+    <h1>Recreate this using HTML &amp; CSS</h1>
+    <img src="https://s3.amazonaws.com/f.cl.ly/items/2z3C3Z0L2Q0R282p1V0z/Image%202014-12-19%20at%2010.07.09%20AM.png"
+      width="303" />
+  </div>
+
+  <!-- Your code goes here -->
+  <div>
+    ,dsfns,dfksdkjf
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore
+      magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+    </p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore
+      magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+    </p>
+  </div>
 
 
-  </body>
+</body>
+
 </html>
