--- a/html-and-css-prototype/index.html
+++ b/html-and-css-prototype/index.html
@@ -16,7 +16,9 @@
 
   <!-- Your code goes here -->
   <div>
-    ,dsfns,dfksdkjf
+    <h1>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ut inventore facilis impedit corporis similique harum
+      omnis, iste, ex perspiciatis voluptas reiciendis iure laudantium numquam, minima repudiandae sit officiis
+      praesentium earum!</h1>
 
 
   </div>
