--- a/html-and-css-prototype/index.html
+++ b/html-and-css-prototype/index.html
@@ -15,14 +15,47 @@
   </div>
 
   <!-- Your code goes here -->
-  <div>
-    <h1>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ut inventore facilis impedit corporis similique harum
-      omnis, iste, ex perspiciatis voluptas reiciendis iure laudantium numquam, minima repudiandae sit officiis
-      praesentium earum!</h1>
-
-
+  <div class="container">
+    <h1>Recreate this using HTML &amp; CSS</h1>
   </div>
 
+
+  <!-- Container -->
+  <div class="box">
+
+    <!-- Black/grey box -->
+    <div class="box-1">
+      <p>$167 still needed for this project</p>
+    </div>
+    <br>
+
+    <!-- Orange bar -->
+    <div class="box-2">
+      <div class="inner-box">
+      </div>
+    </div>
+
+    <!-- Border with text  -->
+    <div class="box-border">
+      <div class="in-box">
+        <p><span class="orange-text"><strong>Only 3 day left</strong></span> to fund this project.</p>
+        <br>
+        <p>Join the <strong>42</strong> other donors who have already supported this project.Every dollar helps.</p>
+      </div>
+      <!-- Input fields  -->
+      <div class="input-but">
+        <input type="text" value="$50" id="input-ex" disabled>
+        <input id="submit-but" type="submit" disabled>
+      </div>
+      <!-- Link -->
+      <p class="link">Why give $50?</p>
+    </div>
+    <!-- Bottom 2 buttons -->
+    <div class="bottom-button">
+      <input type="submit" value="Save for later">
+      <input type="submit" value="Tell your friends">
+    </div>
+  </div>
 
 </body>
 
